update to index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
          <link href="romer.css" rel="stylesheet" type="text/css">
 </head>
     <body>
-    <p>Hello World</p>
+    <p>Romer Garcia 5 tool player</p>
     </body>
 </html>
