--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
     	<title>RomerGarcia.com</title>
          <link rel="author" href="humans.txt" />
          <link href="romer.css" rel="stylesheet" type="text/css">
+         <!--added nice webfont regular italic -->
+          <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,700" rel="stylesheet">
 </head>
     <body>
-    <p>Romer Garcia 5 tool player</p>
+      <header>
+        <nav>
+        </nav>
+      </header>
+
+      <p>Romer Garcia 5 tool player</p>
+
+      <footer>
+      </footer>
     </body>
 </html>
