--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         </nav>
       </header>
 
-      <p>Romer Garcia 5 tool player</p>
+      <h1>Romer Garcia 5 tool player</h1>
+      <p>but you alredy knew that </p>
 
       <footer>
       </footer>
