added more stuff

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       <h1>Romer Garcia 5 tool player</h1>
       <p>but you alredy knew that </p>
+      <p>awwwww yeah</p>
 
       <footer>
       </footer>
